[project]
authors = [
    {name = "Network to Code, LLC", email = "opensource@networktocode.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.8"
dependencies = [
    "nautobot==2.2.1; python_version == \"3.11\"",
    "diffsync<3.0.0,>=2.0.0",
    "Markdown!=3.3.5",
    "packaging<24,>=21.3",
    "prometheus-client>=0.17.1",
    "retry<1.0.0,>=0.9.2",
]
name = "nautobot-ssot"
version = "3.5.1a0"
description = "Nautobot Single Source of Truth"
readme = "README.md"
keywords = [
    "nautobot",
    "nautobot-app",
    "nautobot-plugin",
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://github.com/nautobot/nautobot-app-ssot"
repository = "https://github.com/nautobot/nautobot-app-ssot"
documentation = "https://docs.nautobot.com/projects/ssot/en/latest/"

[project.entry-points."nautobot_ssot.data_sources"]
example = "nautobot_ssot.sync.example:ExampleSyncWorker"

[project.entry-points."nautobot_ssot.data_targets"]
example = "nautobot_ssot.sync.example:ExampleSyncWorker"

[project.entry-points."nautobot.workers"]
ipfabric = "nautobot_ssot.integrations.ipfabric.workers:ipfabric"

[project.optional-dependencies]
all = [
    "Jinja2>=2.11.3",
    "PyYAML>=6",
    "cloudvision<2.0.0,>=1.9.0",
    "cvprac<2.0.0,>=1.2.2",
    "dnspython<3.0.0,>=2.1.0",
    "ijson>=2.5.1",
    "ipfabric<7.0.0,>=6.0.0",
    "nautobot-device-lifecycle-mgmt<3.0.0,>=2.0.0",
    "netutils<2.0.0,>=1.9.0",
    "oauthlib>=3.1.0",
    "python-magic>=0.4.15",
    "pytz>=2019.3",
    "requests>=2.21.0",
    "requests-oauthlib>=1.3.0",
    "six>=1.13.0",
    "urllib3>=2.2.3",
    "dnacentersdk<3.0.0,>=2.5.6",
    "meraki<1.46.0,<2.0.0,>=1.37.2",
    "slurpit_sdk<1.0.0,>=0.9.83",
]
aci = [
    "PyYAML>=6",
]
aristacv = [
    "cloudvision<2.0.0,>=1.9.0",
    "cvprac<2.0.0,>=1.2.2",
]
bootstrap = [
    "pytz>=2019.3",
]
citrix-adm = [
    "requests>=2.21.0",
    "urllib3>=2.2.3",
    "netutils<2.0.0,>=1.9.0",
]
device42 = [
    "requests>=2.21.0",
]
dna_center = [
    "dnacentersdk<3.0.0,>=2.5.6",
    "netutils<2.0.0,>=1.9.0",
]
infoblox = [
    "dnspython<3.0.0,>=2.1.0",
]
ipfabric = [
    "httpx>=0.23.3",
    "ipfabric<7.0.0,>=6.0.0",
    "netutils<2.0.0,>=1.9.0",
]
meraki = [
    "meraki<1.46.0,<2.0.0,>=1.37.2",
]
slurpit = [
    "slurpit_sdk<1.0.0,>=0.9.83",
]
# pysnow = "^0.7.17"
# PySNow is currently pinned to an older version of pytz as a dependency, which blocks compatibility with newer
# versions of Nautobot. See https://github.com/rbw/pysnow/pull/186
# For now, we have embedded a copy of PySNow under nautobot_ssot/integrations/servicenow/third_party/pysnow;
# here are its direct packaging dependencies:
pysnow = [
    "requests>=2.21.0",
    "oauthlib>=3.1.0",
    "python-magic>=0.4.15",
    "requests-oauthlib>=1.3.0",
    "six>=1.13.0",
    "ijson>=2.5.1",
    "pytz>=2019.3",
]
servicenow = [
    "Jinja2>=2.11.3",
    "PyYAML>=6",
    "ijson>=2.5.1",
    "oauthlib>=3.1.0",
    "python-magic>=0.4.15",
    "pytz>=2019.3",
    "requests>=2.21.0",
    "requests-oauthlib>=1.3.0",
    "six>=1.13.0",
]
nautobot-device-lifecycle-mgmt = [
    "nautobot-device-lifecycle-mgmt<3.0.0,>=2.0.0",
]

[dependency-groups]
dev = [
    "coverage",
    "django-debug-toolbar<4.4",
    "invoke",
    "ipython",
    "jedi<1.0.0,>=0.17.2",
    "pylint",
    "pylint-django",
    "pylint-nautobot",
    "ruff==0.5.5",
    "yamllint",
    "markdown-include",
    "toml",
    "Markdown",
    "markdown-version-annotations==1.0.1",
    "mkdocs==1.6.0",
    "mkdocs-material==9.5.32",
    "mkdocstrings==0.25.2",
    "mkdocstrings-python==1.10.8",
    "griffe==1.1.1",
    "towncrier~=23.6.0",
    "requests-mock<2.0.0,>=1.10.0",
    "parameterized<1.0.0,>=0.8.1",
    "myst-parser<3.0.0,>=2.0.0",
    "responses<1.0.0,>=0.14.0",
    "to-json-schema",
    "jsonschema",
    "mkdocs-autorefs==1.2.0",
]

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins = "pylint_django, pylint_nautobot"
ignore = ".venv"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx = "^(_|test_|Meta$)"

[tool.pylint.messages_control]
disable = """,
    line-too-long,
    too-few-public-methods,
"""

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pylint-nautobot]
supported_nautobot_versions = [
    "2.0.0"
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F", "E", "W",  # flake8
    "S",  # bandit
    "I",  # isort
]
ignore = [
    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D203", # 1 blank line required before class docstring

    # D212 is enabled by default in google convention, and complains if we have a docstring like:
    # """
    # My docstring is on the line after the opening quotes instead of on the same line as them.
    # """
    # We've discussed and concluded that we consider this to be a valid style choice.
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line

    # Produces a lot of issues in the current codebase.
    "D401", # First line of docstring should be in imperative mood
    "D407", # Missing dashed underline after section
    "D416", # Section name ends in colon
    "E501", # Line too long

    # Package specific ignores
    "D104", # Missing docstring in public package
    "D417", # Missing argument descriptions in the docstring for ...
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"nautobot_ssot/migrations/*" = [
    "D",
]
"nautobot_ssot/tests/*" = [
    "D",
    "S"
]
"nautobot_ssot/integrations/servicenow/third_party/*" = [
    "D", # pydocstyle
]

[tool.pdm.build]
includes = ["nautobot_ssot", "nautobot_ssot/static/nautobot_ssot/docs/**/*"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.towncrier]
package = "nautobot_ssot"
directory = "changes"
filename = "docs/admin/release_notes/version_X.Y.md"
template = "development/towncrier_template.j2"
start_string = "<!-- towncrier release notes start -->"
issue_format = "[#{issue}](https://github.com/nautobot/nautobot-app-ssot/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "housekeeping"
name = "Housekeeping"
showcontent = true
